fixed z-index of blog icons

--- a/sites/all/themes/ds/css/style.css
+++ b/sites/all/themes/ds/css/style.css
@@ -2547,7 +2547,7 @@ div[role=main] {
   position: relative;
   top: 85px;
   left: -40px;
-  z-index: 1000;
+  z-index: 100;
 }
 #blog-page-pane .pane-content .Celebs-Gone-Good-icon {
   text-indent: -119988px;
@@ -2561,7 +2561,7 @@ div[role=main] {
   position: relative;
   top: 85px;
   left: -40px;
-  z-index: 1000;
+  z-index: 100;
 }
 #blog-page-pane .pane-content .Awe-Some-Ones-icon {
   text-indent: -119988px;
@@ -2575,7 +2575,7 @@ div[role=main] {
   position: relative;
   top: 85px;
   left: -40px;
-  z-index: 1000;
+  z-index: 100;
 }
 #blog-page-pane .pane-content .DoSomething-Staff-icon {
   text-indent: -119988px;
@@ -2589,7 +2589,7 @@ div[role=main] {
   position: relative;
   top: 85px;
   left: -40px;
-  z-index: 1000;
+  z-index: 100;
 }
 #blog-page-pane .pane-content .views-field-created, #blog-page-pane .pane-content .views-field-created-1 {
   display: inline;
