--- a/sites/all/themes/ds/sass/partials/07-layout-design/_design.sass
+++ b/sites/all/themes/ds/sass/partials/07-layout-design/_design.sass
@@ -457,25 +457,25 @@ div[role=main]
       position: relative
       top: 85px
       left: -40px
-      z-index: 1000
+      z-index: 100
     .Celebs-Gone-Good-icon
       +replace-text-with-dimensions("icn-subnav-celebs.png")
       position: relative
       top: 85px
       left: -40px
-      z-index: 1000
+      z-index: 100
     .Awe-Some-Ones-icon
       +replace-text-with-dimensions("icn-subnav-awesomes.png")
       position: relative
       top: 85px
       left: -40px
-      z-index: 1000
+      z-index: 100
     .DoSomething-Staff-icon
       +replace-text-with-dimensions("icn-subnav-staff.png")
       position: relative
       top: 85px
       left: -40px
-      z-index: 1000
+      z-index: 100
     .views-field-created, .views-field-created-1
       +float-left
       background
